--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "2.0.1",
   "description": "Discord bot for private discord server",
   "main": "bot.js",
-  "directories": { "test": "test" },
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --timeout 40000"
   },
   "repository": {
     "type": "git",
